/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java Library project to get you started.
 * For more details take a look at the Java Libraries chapter in the Gradle
 * User Manual available at https://docs.gradle.org/6.0.1/userguide/java_library_plugin.html
 */

plugins {
    id 'java-library'
    id 'maven-publish'
}


group 'com.opengg'
ext.engineVersion = '0.0.4'

configure(subprojects.findAll {it.name != 'modules'}) {
    apply plugin: 'java'
    apply plugin: 'maven-publish'

    version = engineVersion

    sourceCompatibility = 1.15
    targetCompatibility = 1.15

    project.ext.lwjglVersion = "3.2.3"
    project.ext.steamworks4jVersion = "1.8.0"
    project.ext.lwjglNatives = "natives-windows"


    java {
        modularity.inferModulePath = true
    }

    compileJava {
        options.compilerArgs << '--enable-preview'
        options.incremental = true
        options.fork = true 
    }

    repositories {
        jcenter()
        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
    }

    subprojects {
        version = '1.0'
    }

    javadoc {
        if(JavaVersion.current().isJava9Compatible()) {
            options.addBooleanOption('html5', true)
        }
    }
}

subprojects{
    apply plugin: 'java'
    apply plugin: 'maven-publish'
    publishing {
        publications {
            mavenJava(MavenPublication) {
                groupId = 'com.opengg'
                artifactId = "opengg-engine-" + project.name
                from components.java
                pom {
                    name = 'OpenGG Engine Module ' + project.name
                    description = 'Fast Enough for an IBM Terminal'
                    url = 'https://github.com/OpenGGEngine/OpenGG-Project'
                    developers {
                        developer {
                            id = 'javster101'
                        }
                        developer {
                            id = 'WarrenXiaGG'
                        }
                    }
                }


            }
        }
        repositories {
            maven {
                name = "GitHubPackages"
                url = uri("https://maven.pkg.github.com/OpenGGEngine/OpenGG-Project/")
                credentials {
                    username = project.findProperty("gpr.user") ?: System.getenv("USERNAME")
                    password = project.findProperty("gpr.key") ?: System.getenv("TOKEN")
                }
            }
        }
    }
}



